Adjustments to inditify beans