@@ -1,6 +1,8 @@
 package com.yanhausmann.investhub.service;
 
 import com.yanhausmann.investhub.client.BrapiClient;
+import com.yanhausmann.investhub.dto.AccountStockReponseDTO;
+import com.yanhausmann.investhub.dto.AssociateAccountStockDTO;
 import com.yanhausmann.investhub.entity.AccountStock;
 import com.yanhausmann.investhub.entity.AccountStockId;
 import com.yanhausmann.investhub.repository.AccountRepository;
@@ -11,6 +13,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
+import java.util.List;
 import java.util.UUID;
 
 @Service
@@ -18,63 +21,58 @@ public class AccountService {
 
     @Value("#{environment.TOKEN}")
     private String TOKEN;
+
     private AccountRepository accountRepository;
+
     private StockRepository stockRepository;
+
     private AccountStockRepository accountStockRepository;
+
     private BrapiClient brapiClient;
 
-    public AccountService(AccountRepository accountRepository,
-                          StockRepository stockRepository,
-                          AccountStockRepository accountStockRepository,
-                          BrapiClient brapiClient) {
+    public AccountService(AccountRepository accountRepository, StockRepository stockRepository, AccountStockRepository accountStockRepository, BrapiClient brapiClient) {
         this.accountRepository = accountRepository;
         this.stockRepository = stockRepository;
         this.accountStockRepository = accountStockRepository;
         this.brapiClient = brapiClient;
     }
 
-    public void associateStock(String accountId, AssociateAccountStockDto dto) {
+    public void associateStock(String accountId, AssociateAccountStockDTO associateAccountStockDTO) {
 
         var account = accountRepository.findById(UUID.fromString(accountId))
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
 
-        var stock = stockRepository.findById(dto.stockId())
+        var stock = stockRepository.findById(associateAccountStockDTO.stockId())
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
 
-        // DTO -> ENTITY
         var id = new AccountStockId(account.getAccountId(), stock.getStockId());
         var entity = new AccountStock(
                 id,
                 account,
                 stock,
-                dto.quantity()
+                associateAccountStockDTO.quantity()
         );
-
         accountStockRepository.save(entity);
 
     }
 
-    public List<AccountStockResponseDto> listStocks(String accountId) {
+    public List<AccountStockReponseDTO> listStocks(String accountId) {
 
         var account = accountRepository.findById(UUID.fromString(accountId))
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
 
         return account.getAccountStocks()
                 .stream()
-                .map(as ->
-                        new AccountStockResponseDto(
-                                as.getStock().getStockId(),
-                                as.getQuantity(),
-                                getTotal(as.getQuantity(), as.getStock().getStockId())
-                        ))
+                .map(as -> new AccountStockReponseDTO(as.getStock().getStockId(),as.getQuantity(), 0.0))
                 .toList();
+
     }
 
     private double getTotal(Integer quantity, String stockId) {
 
         var response = brapiClient.getQuote(TOKEN, stockId);
 
-        var price = response.results().getFirst().regularMarketPrice();
+        var price = response.results().get(0).regularMarketPrice();
 
         return quantity * price;
     }
